fix(burger_menu): correct align

--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -77,8 +77,8 @@ body {
     box-shadow: 0 0 1px 0;
     text-decoration: none;
     padding: 70px 100px 20px 20px;
-    top: -27px;
-    left: -10px;
+    top: -135%;
+    left: -75%;
     display: flex;
     flex-direction: column;
     gap: 30px;
